microservices/pihole/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-https
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.mancuso.services`)
      kind: Rule
      priority: 10
      services:
        - name: pihole-web
          port: 80
      middlewares:
        - name: sso
          namespace: default
  tls:
    secretName: pihole.mancuso.services-tls

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-http
  namespace: pihole
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pihole.mancuso.services`)
      kind: Rule
      priority: 10
      services:
        - name: pihole-web
          port: 80
      middlewares:
        - name: redirect-https
          namespace: default
