microservices/pihole/pihole-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.mancuso.services`)
      kind: Rule
      priority: 10
      services:
        - name: pihole-web
          port: 80
  tls: {}
